# KODA

./: CMakeLists.txt  run_compression.sh
include/: compression.hpp  movie.hpp  psnr.hpp
samples/: akiyo_cif.y4m  bowing_cif.y4m  bridge_close_cif.y4m  bridge_far_cif.y4m  bus_cif.y4m  carphone_qcif.y4m  city_cif.y4m  claire_qcif.y4m  coastguard_cif.y4m  container_cif.y4m  crew_cif.y4m  deadline_cif.y4m  flower_cif.y4m  football_cif.y4m  foreman_cif.y4m  grandma_qcif.y4m  hall_monitor_cif.y4m  hall_objects_qcif.y4m  harbour_cif.y4m  husky_cif.y4m  ice_cif.y4m  mad900_cif.y4m  miss_am_qcif.y4m  mobile_cif.y4m  mother_daughter_cif.y4m  news_cif.y4m  pamphlet_cif.y4m  paris_cif.y4m  salesman_qcif.y4m  sign_irene_cif.y4m  silent_cif.y4m  soccer_cif.y4m  stefan_sif.y4m  students_cif.y4m  suzie_qcif.y4m  tempete_cif.y4m  tennis_sif.y4m  trevor_qcif.y4m  tt_sif.y4m  waterfall_cif.y4m
src/: compression.cpp  main.cpp  movie.cpp  psnr.cpp
